feat: store more detailed found block info
